<resources>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="back_button" translatable="false">Back</string>
    <string name="profile_title" translatable="false">Profile</string>
    <string name="profile_image" translatable="false">Profile Image</string>
    <string name="default_user_name" translatable="false">User Name</string>
    <string name="settings_button" translatable="false">Settings</string>
    <string name="profile_screen_title" translatable="false">Profile Screen</string>
    <string name="default_user_email" translatable="false">user@gmail.com</string>
    <string name="login_logout_button">Logout</string>
    <string name="sologan">Travel To 36 Destinations</string>
    <string name="welcome">Welcome </string>
    <string name="loginbygg">Login with Google </string>
    <string name="loginotp">Log in by phone number </string>
    <string name="default_web_client_id" translatable="false">769484445271-gdi89vbn367v5fcas21ro5bov4spi1jn.apps.googleusercontent.com</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="skybird" translatable="false">SKYBIRD</string>
    <string name="intro_title">Fly anywhere easily  without obstacles</string>
    <string name="intro_subtitle" translatable="false">Experience the unparalleled\n freedom of unhindered\n flight as you effortlessly travers</string>
    <string name="get_started">Get Started</string>
    <string name="passengers">Passengers</string>
    <string name="search_flights">Search Flights</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="toShort">to</string>
    <string name="username" translatable="false">User Name</string>
    <string name="app_name" translatable="false">Airtravel</string>
    <string name="background_image" translatable="false">Background image</string>
    <string name="app_logo" translatable="false">App logo</string>
    <string name="username_or_email" translatable="false">Username or Email</string>
    <string name="password">Password</string>
    <string name="remember_me" translatable="false">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or_continue_with">or continue with</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_with_google" translatable="false">Login with Google</string>
    <string name="login_with_facebook" translatable="false">Login with Facebook</string>
    <string name="login_with_twitter" translatable="false">Login with Twitter</string>
    <string name="error_email_required" translatable="false">Email is required</string>
    <string name="error_email_invalid" translatable="false">Invalid email format</string>
    <string name="error_password_required" translatable="false">Password is required</string>
    <string name="error_password_length" translatable="false">Password must be at least 6 characters</string>
    <string name="login_with_instagram" translatable="false" />
    <string name="experience_image_description" translatable="false" />
    <string name="addExp" >Add EXP</string>
    <string name="logout" >Log out</string>
    <string name="collection" >Collection</string>
    <string name="travel_process" >Travel process</string>
    <string name="my_wallet" >My wallet</string>
    <string name="my_order" translatable="false">My order</string>
    <string name="username_placeholder" >User name</string>
    <string name="user_email_placeholder" translatable="false">Email</string>
    <string name="collection_preview_image_description" >Preview images</string>
    <string name="name" >Name</string>
    <string name="FillName" >Enter Your Name</string>
    <string name="birthday" >BirthDay</string>
    <string name="hometown" >Hometown</string>
    <string name="FillHometown" >Enter Your HomeTown</string>
    <string name="save" >Save changes</string>
    <string name="preview_title" >Title</string>
    <string name="preview_user_name">Person</string>
    <string name="bullet_separator" >•</string>
    <string name="preview_timestamp" translatable="false">03/03/2003</string>
    <string name="preview_location" >Loaction</string>
    <string name="preview_description" >Description</string>
    <string name="preview_like_count" >36</string>
    <string name="comment_input_hint" >comment</string>
    <string name="send_button_description" >send</string>
    <string name="comment_section_title" >Comment</string>
    <string name="post_experience_title">Post Experience</string>
    <string name="select_image_label">Select Image</string>
    <string name="select_image_button">Choose Image</string>
    <string name="title_label">Title</string>
    <string name="title_input_hint">Enter experience title</string>
    <string name="experience_label">Your Experience</string>
    <string name="experience_input_hint">Share your experience here...</string>
    <string name="location_label">Location</string>
    <string name="location_input_hint">Enter the location</string>
    <string name="post_button">Post</string>
    <string name="experience_toolbar_title">Experiences</string>
    <string name="search_hint">Search</string>
    <string name="empty_state_image_description">No data</string>
    <string name="empty_state_message">No experiences yet</string>
    <string name="refresh_button">Refresh</string>
    <string name="fab_add_experience_description">Add new experience</string>
    <string name="back_button_description">Back</string>
    <string name="app_logo_description">App Logo</string>
    <string name="sign_up_title">Sign up</string>
    <string name="label_email">Email</string>
    <string name="hint_your_email">Your email</string>
    <string name="label_password">Password</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="terms_and_policy_acceptance">I accept the terms and privacy policy</string>
    <string name="sign_up_button">Sign up</string>
    <string name="or_register_with">Or Register with</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register_with_apple">Register with Apple</string>
    <string name="already_have_account_prompt">Already have an account?</string>
    <string name="log_in_link">Log in</string>
    <string name="guide_book_flight_title">How to Book a Flight</string>
    <string name="guide_step1_title">1. Select Departure and Destination</string>
    <string name="guide_step1_desc">→ Use the dropdown menus to choose cities in the \'From\' and \'To\' fields.</string>
    <string name="guide_step1_image_desc">Step 1 illustration</string>
    <string name="guide_step2_title">2. Select Departure and Return Dates</string>
    <string name="guide_step2_desc">→ Tap on the date fields to open the calendar and pick your dates.</string>
    <string name="guide_step2_image_desc">Step 2 illustration</string>
    <string name="guide_step3_title">3. Choose Number of Passengers</string>
    <string name="guide_step3_desc">→ Use the \'+\' and \'-\' buttons to adjust the number of adults and children.</string>
    <string name="guide_step3_image_desc">Step 3 illustration</string>
    <string name="guide_step4_title">4. Select Seat Class</string>
    <string name="guide_step4_desc">→ Choose from Economy, Business, or First Class.</string>
    <string name="guide_step4_image_desc">Step 4 illustration</string>
    <string name="guide_step5_title">5. Tap on \"Search Flights\"</string>
 <string name="guide_step5_desc">→ The app will search and display available flights that match your criteria.</string>
    <string name="guide_step5_image_desc">Step 5 illustration</string>
    <string name="guide_step6_title">6. Choose a Flight</string>
    <string name="guide_step6_desc">→ Choose a suitable airline and departure time.</string>
    <string name="guide_step6_image_desc">Step 6 illustration</string>
    <string name="guide_step7_title">7. Choose a seat</string>
    <string name="guide_step7_desc">→ Select the seat that\'s right for you</string>
    <string name="guide_step7_image_desc">Step 7 illustration</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_explorer">Explorer</string>
    <string name="bottom_nav_user_guide">User Guide</string>
 <string name="bottom_nav_profile">Profile</string>
</resources>